# Adventure-Game

./: .cpanel.yml  .gitignore  CHANGELOG.txt  README.html  README.md  codex-test.txt  fight_legacy.py  index.html  main.py  main_legacy.py  story-and-fights-guide.html
cpp/: CMakeLists.txt  README.md  adventure-game.desktop.in  adventure_game.cpp  linux-launcher.sh.in  patch_cloud_saves.py  patch_cpp_cloud_slot_names.py
legacy/: README.html  README.md
text_adventure/: __init__.py  cloud_saves.py  combat.py  data.py  logo.py  pacing.py  player.py  save_system.py  shop.py  story.py  terminal_colors.py  ui.py
web/: app.js  pacing.txt  styles.css
